[package]
name = "digitalsign"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand="0.8.5"
num-bigint={version="0.4.5", features = ["rand"]}
num-traits="0.2.19"
large-primes="0.5.1"
base64 = "0.22.1"
sha3="0.10.8"